// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders Pagination with customized props correctly 1`] = `
<ul
  class="zw-pagination"
>
  <li
    class="zw-pagination__item zw-pagination__prev zw-pagination--disabled"
    title="上一页"
  >
    <i
      class="zw-icon zw-pagination__item--icon zw-icon--arrow-left zw-icon--default zw-icon--md"
      theme="default"
      type="arrow-left"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
      >
        <use
          href="#arrow-left"
        />
      </svg>
    </i>
  </li>
  <li
    class="zw-pagination__item zw-pagination--active"
    title="1"
  >
    1
  </li>
  <li
    class="zw-pagination__item"
    title="2"
  >
    2
  </li>
  <li
    class="zw-pagination__item"
    title="3"
  >
    3
  </li>
  <li
    class="zw-pagination__item"
    title="4"
  >
    4
  </li>
  <li
    class="zw-pagination__item"
    title="5"
  >
    5
  </li>
  <li
    class="zw-pagination__item zw-pagination__item--ellipsis"
    title="向后 5 页"
  />
  <li
    class="zw-pagination__item"
    title="最后一页"
  >
    10
  </li>
  <li
    class="zw-pagination__item zw-pagination__next"
    title="下一页"
  >
    <i
      class="zw-icon zw-pagination__item--icon zw-icon--arrow-right zw-icon--default zw-icon--md"
      theme="default"
      type="arrow-right"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
      >
        <use
          href="#arrow-right"
        />
      </svg>
    </i>
  </li>
</ul>
`;

exports[`Pagination renders Pagination with jumper correctly 1`] = `
<ul
  class="zw-pagination"
>
  <li
    class="zw-pagination__item zw-pagination__prev zw-pagination--disabled"
    title="上一页"
  >
    <i
      class="zw-icon zw-pagination__item--icon zw-icon--arrow-left zw-icon--default zw-icon--md"
      theme="default"
      type="arrow-left"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
      >
        <use
          href="#arrow-left"
        />
      </svg>
    </i>
  </li>
  <li
    class="zw-pagination__item zw-pagination--active"
    title="1"
  >
    1
  </li>
  <li
    class="zw-pagination__item"
    title="2"
  >
    2
  </li>
  <li
    class="zw-pagination__item"
    title="3"
  >
    3
  </li>
  <li
    class="zw-pagination__item"
    title="4"
  >
    4
  </li>
  <li
    class="zw-pagination__item"
    title="5"
  >
    5
  </li>
  <li
    class="zw-pagination__item zw-pagination__item--ellipsis"
    title="向后 5 页"
  />
  <li
    class="zw-pagination__item"
    title="最后一页"
  >
    10
  </li>
  <li
    class="zw-pagination__item zw-pagination__next"
    title="下一页"
  >
    <i
      class="zw-icon zw-pagination__item--icon zw-icon--arrow-right zw-icon--default zw-icon--md"
      theme="default"
      type="arrow-right"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
      >
        <use
          href="#arrow-right"
        />
      </svg>
    </i>
  </li>
  <li
    class="zw-pagination__options"
  >
    <div
      class="zw-pagination__options--jumper"
    >
      跳至
      <input
        type="text"
      />
      页
    </div>
  </li>
</ul>
`;

exports[`Pagination renders Pagination with total info correctly 1`] = `
<ul
  class="zw-pagination"
>
  <li
    class="zw-pagination__total"
  >
    共有 100 条记录 第 1 / 10 页
  </li>
  <li
    class="zw-pagination__item zw-pagination__prev zw-pagination--disabled"
    title="上一页"
  >
    <i
      class="zw-icon zw-pagination__item--icon zw-icon--arrow-left zw-icon--default zw-icon--md"
      theme="default"
      type="arrow-left"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
      >
        <use
          href="#arrow-left"
        />
      </svg>
    </i>
  </li>
  <li
    class="zw-pagination__item zw-pagination--active"
    title="1"
  >
    1
  </li>
  <li
    class="zw-pagination__item"
    title="2"
  >
    2
  </li>
  <li
    class="zw-pagination__item"
    title="3"
  >
    3
  </li>
  <li
    class="zw-pagination__item"
    title="4"
  >
    4
  </li>
  <li
    class="zw-pagination__item"
    title="5"
  >
    5
  </li>
  <li
    class="zw-pagination__item zw-pagination__item--ellipsis"
    title="向后 5 页"
  />
  <li
    class="zw-pagination__item"
    title="最后一页"
  >
    10
  </li>
  <li
    class="zw-pagination__item zw-pagination__next"
    title="下一页"
  >
    <i
      class="zw-icon zw-pagination__item--icon zw-icon--arrow-right zw-icon--default zw-icon--md"
      theme="default"
      type="arrow-right"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
      >
        <use
          href="#arrow-right"
        />
      </svg>
    </i>
  </li>
</ul>
`;

exports[`Pagination renders normal Pagination correctly 1`] = `
<ul
  class="zw-pagination"
>
  <li
    class="zw-pagination__item zw-pagination__prev zw-pagination--disabled"
    title="上一页"
  >
    <i
      class="zw-icon zw-pagination__item--icon zw-icon--arrow-left zw-icon--default zw-icon--md"
      theme="default"
      type="arrow-left"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
      >
        <use
          href="#arrow-left"
        />
      </svg>
    </i>
  </li>
  <li
    class="zw-pagination__item zw-pagination--active"
    title="1"
  >
    1
  </li>
  <li
    class="zw-pagination__item"
    title="2"
  >
    2
  </li>
  <li
    class="zw-pagination__item"
    title="3"
  >
    3
  </li>
  <li
    class="zw-pagination__item"
    title="4"
  >
    4
  </li>
  <li
    class="zw-pagination__item"
    title="5"
  >
    5
  </li>
  <li
    class="zw-pagination__item zw-pagination__item--ellipsis"
    title="向后 5 页"
  />
  <li
    class="zw-pagination__item"
    title="最后一页"
  >
    10
  </li>
  <li
    class="zw-pagination__item zw-pagination__next"
    title="下一页"
  >
    <i
      class="zw-icon zw-pagination__item--icon zw-icon--arrow-right zw-icon--default zw-icon--md"
      theme="default"
      type="arrow-right"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
      >
        <use
          href="#arrow-right"
        />
      </svg>
    </i>
  </li>
</ul>
`;

exports[`Pagination renders size correctly 1`] = `
<div>
  <ul
    class="zw-pagination zw-pagination--sm"
  >
    <li
      class="zw-pagination__item zw-pagination__prev zw-pagination--disabled"
      title="上一页"
    >
      <i
        class="zw-icon zw-pagination__item--icon zw-icon--arrow-left zw-icon--default zw-icon--md"
        theme="default"
        type="arrow-left"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#arrow-left"
          />
        </svg>
      </i>
    </li>
    <li
      class="zw-pagination__item zw-pagination--active"
      title="1"
    >
      1
    </li>
    <li
      class="zw-pagination__item"
      title="2"
    >
      2
    </li>
    <li
      class="zw-pagination__item"
      title="3"
    >
      3
    </li>
    <li
      class="zw-pagination__item"
      title="4"
    >
      4
    </li>
    <li
      class="zw-pagination__item"
      title="5"
    >
      5
    </li>
    <li
      class="zw-pagination__item zw-pagination__item--ellipsis"
      title="向后 5 页"
    />
    <li
      class="zw-pagination__item"
      title="最后一页"
    >
      10
    </li>
    <li
      class="zw-pagination__item zw-pagination__next"
      title="下一页"
    >
      <i
        class="zw-icon zw-pagination__item--icon zw-icon--arrow-right zw-icon--default zw-icon--md"
        theme="default"
        type="arrow-right"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#arrow-right"
          />
        </svg>
      </i>
    </li>
  </ul>
</div>
`;
